# boxctl

./: .gitignore  CHANGELOG.md  Dockerfile.base  LICENSE  README.md  pyproject.toml
agentbox/: __init__.py  cli.py  config.py  container.py  host_config.py  library.py  network.py  proxy.py
agentbox/cli/commands/: agents.py  project.py
agentbox/cli/helpers/: __init__.py  agent_commands.py  context.py
agentbox/models/: project_config.py
boxctl/: __init__.py  boxctld.py  config.py  container.py  container_client.py  container_naming.py  host_config.py  library.py  notifications.py  paths.py  remote_qa.py  ssh_tunnel.py
boxctl/agentctl/: cli.py  helpers.py
boxctl/agentctl/worktree/: commands.py  metadata.py  utils.py
boxctl/channels/: telegram.py
boxctl/cli/: __init__.py
boxctl/cli/commands/: agents.py  devices.py  logs.py  mcp.py  network.py  ports.py  project.py  quick.py  run.py  service.py  sessions.py  skill.py  usage.py  worktree.py
boxctl/cli/helpers/: __init__.py  agent_commands.py  command_ops.py  completions.py  config_ops.py  context.py  port_utils.py  tmux_ops.py  utils.py
boxctl/core/: input_detection.py  sessions.py  tmux.py
boxctl/migrations/: rename_migration.py  runner.py  v0_3_0_unified.py
boxctl/models/: project_config.py
boxctl/usage/: client.py  fallback.py  parser.py
boxctl/utils/: logging.py  terminal.py
boxctl/web/: host_server.py  pty_manager.py  tmux_manager.py  tmux_streaming.py
completions/: agentbox-completion.bash  agentbox-completion.zsh
docs/: 02-two-worlds.md  06-mobile.md  08-configuration.md  AGENT-QUICK-REF.md  AGENT-architecture.md  REF-A-cli.md  architecture.md  configuration.md  features.md  getting-started.md  notifications.md  workflows.md
tests/: conftest.py  test_agent_persistence.py  test_agentctl.py  test_boxctl_yml.py  test_cli_commands.py  test_cli_execution.py  test_cli_regression.py  test_config_hostname.py  test_config_loading.py  test_container.py  test_distribute_mcp.py  test_init.py  test_library.py  test_mcp.py  test_notifications.py  test_packages.py  test_remote_qa.py  test_session_warnings.py  test_sessions.py  test_skills.py  test_superclaude.py  test_web_stale_detection.py  test_workflows.py  test_workspace.py
tests/dind-tests/: README.md  conftest.py  test_full_workflow.py
tests/dind-tests/chains/: test_mcp_persistence.py  test_packages_persistence.py
tests/dind-tests/helpers/: config.py  docker.py
tests/test_worktree/: test_metadata.py  test_utils.py
tests/vm-tests/: README.md  __init__.py  pytest.ini
(+33 files in other folders)
