[tool.poetry]
name = "agentbox"
version = "0.1.0"
description = "Secure, isolated Docker environment for Claude Code with complete development tooling"
authors = ["Marc Schuetze <marc@schuetze.io>"]
readme = "README.md"
packages = [{include = "agentbox"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
docker = "^7.0.0"
pyyaml = "^6.0.1"
rich = "^13.7.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
mypy = "^1.7.1"
ruff = "^0.1.8"

[tool.poetry.scripts]
agentbox = "agentbox.cli:main"
abox = "agentbox.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
